syntax = "proto3";

package conversion;

option go_package = "./";

service ConversionService {
  rpc Convert (ConvertRequest) returns (ConvertResponse);
}

message ConvertRequest {
  string from_currency = 1;
  string to_currency = 2;
  double amount = 3;
}

message ConvertResponse {
  double converted_amount = 1;
}
